Lab6/RSimpleParser.py
# Generated from RSimple.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RSimpleParser ( Parser ):

    grammarFileName = "RSimple.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<-'", "'='", "'if'", "'else'", "'while'", 
                     "'print'", "'scan'", "'TRUE'", "'FALSE'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<='", "'>='", 
                     "'=='", "'!='", "'<'", "'>'", "'+'", "'-'", "'*'", 
                     "'/'", "'^'", "'('", "')'", "'{'", "'}'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "IF", "ELSE", 
                      "WHILE", "PRINT", "SCAN", "TRUE", "FALSE", "ID", "INT", 
                      "FLOAT", "ASSIGN", "LE", "GE", "EQ", "NE", "LT", "GT", 
                      "PLUS", "MINUS", "MULT", "DIV", "POWER", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "COMMA", "COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statementList = 1
    RULE_statement = 2
    RULE_assignment = 3
    RULE_assignOp = 4
    RULE_outputStatement = 5
    RULE_expressionList = 6
    RULE_ifStatement = 7
    RULE_whileStatement = 8
    RULE_statementBlock = 9
    RULE_expression = 10
    RULE_arithmExpression = 11
    RULE_term = 12
    RULE_power = 13
    RULE_factor = 14
    RULE_primary = 15
    RULE_relOp = 16
    RULE_boolConst = 17

    ruleNames =  [ "program", "statementList", "statement", "assignment", 
                   "assignOp", "outputStatement", "expressionList", "ifStatement", 
                   "whileStatement", "statementBlock", "expression", "arithmExpression", 
                   "term", "power", "factor", "primary", "relOp", "boolConst" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    IF=3
    ELSE=4
    WHILE=5
    PRINT=6
    SCAN=7
    TRUE=8
    FALSE=9
    ID=10
    INT=11
    FLOAT=12
    ASSIGN=13
    LE=14
    GE=15
    EQ=16
    NE=17
    LT=18
    GT=19
    PLUS=20
    MINUS=21
    MULT=22
    DIV=23
    POWER=24
    LPAREN=25
    RPAREN=26
    LBRACE=27
    RBRACE=28
    COMMA=29
    COMMENT=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(RSimpleParser.StatementListContext,0)


        def EOF(self):
            return self.getToken(RSimpleParser.EOF, 0)

        def getRuleIndex(self):
            return RSimpleParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RSimpleParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.statementList()
            self.state = 37
            self.match(RSimpleParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RSimpleParser.StatementContext)
            else:
                return self.getTypedRuleContext(RSimpleParser.StatementContext,i)


        def getRuleIndex(self):
            return RSimpleParser.RULE_statementList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = RSimpleParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1128) != 0):
                self.state = 39
                self.statement()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(RSimpleParser.AssignmentContext,0)


        def outputStatement(self):
            return self.getTypedRuleContext(RSimpleParser.OutputStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(RSimpleParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(RSimpleParser.WhileStatementContext,0)


        def getRuleIndex(self):
            return RSimpleParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = RSimpleParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.assignment()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.outputStatement()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.ifStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.whileStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RSimpleParser.ID, 0)

        def assignOp(self):
            return self.getTypedRuleContext(RSimpleParser.AssignOpContext,0)


        def expression(self):
            return self.getTypedRuleContext(RSimpleParser.ExpressionContext,0)


        def getRuleIndex(self):
            return RSimpleParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = RSimpleParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(RSimpleParser.ID)
            self.state = 52
            self.assignOp()
            self.state = 53
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RSimpleParser.RULE_assignOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignOp" ):
                return visitor.visitAssignOp(self)
            else:
                return visitor.visitChildren(self)




    def assignOp(self):

        localctx = RSimpleParser.AssignOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(RSimpleParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(RSimpleParser.LPAREN, 0)

        def expressionList(self):
            return self.getTypedRuleContext(RSimpleParser.ExpressionListContext,0)


        def RPAREN(self):
            return self.getToken(RSimpleParser.RPAREN, 0)

        def getRuleIndex(self):
            return RSimpleParser.RULE_outputStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutputStatement" ):
                return visitor.visitOutputStatement(self)
            else:
                return visitor.visitChildren(self)




    def outputStatement(self):

        localctx = RSimpleParser.OutputStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_outputStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(RSimpleParser.PRINT)
            self.state = 58
            self.match(RSimpleParser.LPAREN)
            self.state = 59
            self.expressionList()
            self.state = 60
            self.match(RSimpleParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RSimpleParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(RSimpleParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RSimpleParser.COMMA)
            else:
                return self.getToken(RSimpleParser.COMMA, i)

        def getRuleIndex(self):
            return RSimpleParser.RULE_expressionList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = RSimpleParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.expression()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 63
                self.match(RSimpleParser.COMMA)
                self.state = 64
                self.expression()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(RSimpleParser.IF, 0)

        def LPAREN(self):
            return self.getToken(RSimpleParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(RSimpleParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(RSimpleParser.RPAREN, 0)

        def statementBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RSimpleParser.StatementBlockContext)
            else:
                return self.getTypedRuleContext(RSimpleParser.StatementBlockContext,i)


        def ELSE(self):
            return self.getToken(RSimpleParser.ELSE, 0)

        def getRuleIndex(self):
            return RSimpleParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = RSimpleParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(RSimpleParser.IF)
            self.state = 71
            self.match(RSimpleParser.LPAREN)
            self.state = 72
            self.expression()
            self.state = 73
            self.match(RSimpleParser.RPAREN)
            self.state = 74
            self.statementBlock()
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 75
                self.match(RSimpleParser.ELSE)
                self.state = 76
                self.statementBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(RSimpleParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(RSimpleParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(RSimpleParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(RSimpleParser.RPAREN, 0)

        def statementBlock(self):
            return self.getTypedRuleContext(RSimpleParser.StatementBlockContext,0)


        def getRuleIndex(self):
            return RSimpleParser.RULE_whileStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = RSimpleParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(RSimpleParser.WHILE)
            self.state = 80
            self.match(RSimpleParser.LPAREN)
            self.state = 81
            self.expression()
            self.state = 82
            self.match(RSimpleParser.RPAREN)
            self.state = 83
            self.statementBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(RSimpleParser.LBRACE, 0)

        def statementList(self):
            return self.getTypedRuleContext(RSimpleParser.StatementListContext,0)


        def RBRACE(self):
            return self.getToken(RSimpleParser.RBRACE, 0)

        def statement(self):
            return self.getTypedRuleContext(RSimpleParser.StatementContext,0)


        def getRuleIndex(self):
            return RSimpleParser.RULE_statementBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementBlock" ):
                return visitor.visitStatementBlock(self)
            else:
                return visitor.visitChildren(self)




    def statementBlock(self):

        localctx = RSimpleParser.StatementBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statementBlock)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(RSimpleParser.LBRACE)
                self.state = 86
                self.statementList()
                self.state = 87
                self.match(RSimpleParser.RBRACE)
                pass
            elif token in [3, 5, 6, 10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolConst(self):
            return self.getTypedRuleContext(RSimpleParser.BoolConstContext,0)


        def arithmExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RSimpleParser.ArithmExpressionContext)
            else:
                return self.getTypedRuleContext(RSimpleParser.ArithmExpressionContext,i)


        def relOp(self):
            return self.getTypedRuleContext(RSimpleParser.RelOpContext,0)


        def getRuleIndex(self):
            return RSimpleParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = RSimpleParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.boolConst()
                pass
            elif token in [7, 10, 11, 12, 21, 25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.arithmExpression()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1032192) != 0):
                    self.state = 94
                    self.relOp()
                    self.state = 95
                    self.arithmExpression()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RSimpleParser.TermContext)
            else:
                return self.getTypedRuleContext(RSimpleParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(RSimpleParser.PLUS)
            else:
                return self.getToken(RSimpleParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(RSimpleParser.MINUS)
            else:
                return self.getToken(RSimpleParser.MINUS, i)

        def getRuleIndex(self):
            return RSimpleParser.RULE_arithmExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmExpression" ):
                return visitor.visitArithmExpression(self)
            else:
                return visitor.visitChildren(self)




    def arithmExpression(self):

        localctx = RSimpleParser.ArithmExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arithmExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.term()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20 or _la==21:
                self.state = 102
                _la = self._input.LA(1)
                if not(_la==20 or _la==21):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 103
                self.term()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def power(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RSimpleParser.PowerContext)
            else:
                return self.getTypedRuleContext(RSimpleParser.PowerContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(RSimpleParser.MULT)
            else:
                return self.getToken(RSimpleParser.MULT, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(RSimpleParser.DIV)
            else:
                return self.getToken(RSimpleParser.DIV, i)

        def getRuleIndex(self):
            return RSimpleParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = RSimpleParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.power()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22 or _la==23:
                self.state = 110
                _la = self._input.LA(1)
                if not(_la==22 or _la==23):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 111
                self.power()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PowerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(RSimpleParser.FactorContext,0)


        def POWER(self):
            return self.getToken(RSimpleParser.POWER, 0)

        def power(self):
            return self.getTypedRuleContext(RSimpleParser.PowerContext,0)


        def getRuleIndex(self):
            return RSimpleParser.RULE_power

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPower" ):
                return visitor.visitPower(self)
            else:
                return visitor.visitChildren(self)




    def power(self):

        localctx = RSimpleParser.PowerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_power)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.factor()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 118
                self.match(RSimpleParser.POWER)
                self.state = 119
                self.power()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self):
            return self.getTypedRuleContext(RSimpleParser.PrimaryContext,0)


        def MINUS(self):
            return self.getToken(RSimpleParser.MINUS, 0)

        def getRuleIndex(self):
            return RSimpleParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = RSimpleParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 122
                self.match(RSimpleParser.MINUS)


            self.state = 125
            self.primary()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RSimpleParser.ID, 0)

        def INT(self):
            return self.getToken(RSimpleParser.INT, 0)

        def FLOAT(self):
            return self.getToken(RSimpleParser.FLOAT, 0)

        def SCAN(self):
            return self.getToken(RSimpleParser.SCAN, 0)

        def LPAREN(self):
            return self.getToken(RSimpleParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(RSimpleParser.RPAREN, 0)

        def arithmExpression(self):
            return self.getTypedRuleContext(RSimpleParser.ArithmExpressionContext,0)


        def getRuleIndex(self):
            return RSimpleParser.RULE_primary

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimary" ):
                return visitor.visitPrimary(self)
            else:
                return visitor.visitChildren(self)




    def primary(self):

        localctx = RSimpleParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_primary)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(RSimpleParser.ID)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(RSimpleParser.INT)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.match(RSimpleParser.FLOAT)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.match(RSimpleParser.SCAN)
                self.state = 131
                self.match(RSimpleParser.LPAREN)
                self.state = 132
                self.match(RSimpleParser.RPAREN)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 133
                self.match(RSimpleParser.LPAREN)
                self.state = 134
                self.arithmExpression()
                self.state = 135
                self.match(RSimpleParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(RSimpleParser.LT, 0)

        def LE(self):
            return self.getToken(RSimpleParser.LE, 0)

        def GT(self):
            return self.getToken(RSimpleParser.GT, 0)

        def GE(self):
            return self.getToken(RSimpleParser.GE, 0)

        def EQ(self):
            return self.getToken(RSimpleParser.EQ, 0)

        def NE(self):
            return self.getToken(RSimpleParser.NE, 0)

        def getRuleIndex(self):
            return RSimpleParser.RULE_relOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelOp" ):
                return visitor.visitRelOp(self)
            else:
                return visitor.visitChildren(self)




    def relOp(self):

        localctx = RSimpleParser.RelOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_relOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1032192) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(RSimpleParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(RSimpleParser.FALSE, 0)

        def getRuleIndex(self):
            return RSimpleParser.RULE_boolConst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolConst" ):
                return visitor.visitBoolConst(self)
            else:
                return visitor.visitChildren(self)




    def boolConst(self):

        localctx = RSimpleParser.BoolConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_boolConst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





